Added Raspberry pi cam function

--- a/wsserver/index.html
+++ b/wsserver/index.html
@@ -8,7 +8,7 @@
     <textarea id="message"></textarea>
     <button onClick="fire()">Send</button>
     <div id='messages'></div>
-    <img id="mydog" src="http://cdn.akc.org/content/article-body-image/keeshond_dog_pictures.jpg" />
+    <img id="mydog" src="" />
 
 
     <script>
