--- a/wsserver/index.html
+++ b/wsserver/index.html
@@ -19,7 +19,7 @@
             getElement('messages').appendChild(pTag);
         };
 
-        const ws = new WebSocket('ws://localhost:3030');
+        const ws = new WebSocket('ws://10.0.0.223:3030');
         ws.onopen = () => {
             console.log('Now connected');
         };
