image string is now sent directly to client

--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
     <img id="pic" src="" />
 
     <script>
-        const getElement = (id) => document.getElementById(id);
-        const ws = new WebSocket('ws://10.0.0.223:3030');
+        const getElement = (id) => document.getElementById(id)
+        const ws = new WebSocket('ws://10.0.0.223:3030')
 
         ws.onopen = () => {
-            console.log('Now connected');
-        };
+            console.log('Now connected')
+        }
 
         ws.onmessage = (event) => {
+            console.log(event)
             document.getElementById("pic").src = `data:image/png;base64, ${event.data}`
-        };
+        }
 
         /**
          * function getPics is triggered when user click the button.
          * the message string 'trigger' itself doesn't do anything
          */
         const getPics = () => {
-            ws.send('trigger');
-        };
+            ws.send('trigger')
+        }
         
         const stop = () => {
-            ws.close();
+            ws.close()
             }
     </script>
 </body>
