format & comments added

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Websocket Client Page</title>
+    <title>Websocket Client Main Page</title>
 </head>
 
 <body>
     <h3>Main Page</h3>
     <a href="stream.html">Go to stream page</a>
-    
-</body>
 
+</body>
 </html>
