--- a/public/stream.html
+++ b/public/stream.html
@@ -2,29 +2,29 @@
 <html lang="en">
 
 <head>
-    <title>Stream Page</title>
+	<title>Stream Page</title>
 </head>
 
 <body>
-	
+
 	<h3>streaming page</h3>
 	<a href="index.html">Go to main page</a>
 	<img id="streamImage" class="xform" src="" />
 	<script>
-	const ws = new WebSocket('ws://10.0.0.223:3030')
-		
-        ws.onopen = () => {
-            console.log('Now connected')
-	    ws.send('trigger')
-	    document.getElementById("streamImage").src = "http://10.0.0.223:8080/?action=stream"
-        }
-        
-        ws.onclose = () => {
-	   console.log('connection closed')
+		const ws = new WebSocket('ws://10.0.0.223:3030')
+
+		ws.onopen = () => {
+			console.log('Now connected')
+			ws.send('trigger')	// send message to server so it starts mjpg_streamer
+			document.getElementById("streamImage").src = "http://10.0.0.223:8080/?action=stream"
+		}
+
+		ws.onclose = () => {
+			console.log('connection closed')
 		}
 
 	</script>
-	
+
 </body>
 
 </html>
