added more comments

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,8 @@
+<!--
+    Main page of the client. It simply has a heading, and button that
+    directs user to streaming page.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
