IP address change

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,15 @@
 <html lang="en">
 
 <head>
-    <title>Websocket Client Main Page</title>
+    <title>Main Page</title>
 </head>
 
 <body>
     <h3>Main Page</h3>
-    <a href="stream.html">Go to stream page</a>
+    <a href="settings.html">Go to settings page</a>
+    <a href=".html">Go to  page</a>
+    <a href=".html">Go to  page</a>
+    <a href=".html">Go to  page</a>
 
 </body>
 </html>
