--- a/public/stream.html
+++ b/public/stream.html
@@ -63,7 +63,7 @@
 	
 	ws.onmessage = (message) => {
 
-		console.log(message)
+		console.log(message.data)
 		//document.getElementById("streamImage").src = "http://172.27.236.12/?action=stream"	// streaming video by using mjpg_streamer
 		}
 
