--- a/public/stream.html
+++ b/public/stream.html
@@ -52,7 +52,7 @@
 
 <script>
 
-	import { ipAddress } from '../server'
+	const ipAddress = require('../server')
 	console.log(ipAddress)
 	console.log('hey')
 	const ws = new WebSocket('ws://10.0.0.147:3030')	// Initializing websocket connection. It is using hardcoded IP address of Pi (server)
