--- a/public/stream.html
+++ b/public/stream.html
@@ -9,7 +9,7 @@
 
 <head>
 	<title>Stream Page</title>
-	<script type="text/javascript" src="../variables"></script>
+	<script type="text/javascript" src="./variables"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
