--- a/public/stream.html
+++ b/public/stream.html
@@ -66,7 +66,7 @@
 	
 	ws.onmessage = (message) => {
 
-		//console.log(message.data)
+		console.log(message.data)
 		document.getElementById("streamImage").src = "http://192.168.1.70/?action=stream"	// streaming video by using mjpg_streamer
 		}
 
