--- a/public/stream.html
+++ b/public/stream.html
@@ -38,7 +38,7 @@
 
 		<div role="main" class="ui-content">
 			<p>Page content goes here.</p>
-			<img id="streamImage" class="xform" src="" />
+			<img id="streamImage" class="xform" src="http://192.168.1.70:8080/?action=stream" />
 		</div><!-- /content -->
 
 		<div data-role="footer">
