--- a/public/settings.html
+++ b/public/settings.html
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                         <label for="select-native-1">Select quality of Video:</label>
-                        <select name="select-native-1" id="videoQuaility">
+                        <select name="select-native-1" id="videoQuality">
                                 <option value="640x480">640 x 480</option>
                                 <option value="1280x720">1280 x 720 (default)</option>
                                 <option value="1280x960">1280 x 960</option>
@@ -87,7 +87,7 @@
 </html>
 
 <script>
-    const ws = new WebSocket('ws://10.0.0.147:3030')
+    const ws = new WebSocket('ws://192.168.1.70:3030')
     let userJSON
     let dataJson
 
@@ -130,13 +130,9 @@
         });
 
         $("#updateButton").click(function () {
-            //var str = $("#videoQuaility").val();
-            //alert(str);
-            var newSetting = { "dataType": "configuration" }
-            newSetting.videoQuaility = $("#videoQuaility").val();
-            newSetting.amplitude = $("#amplitude").val();
-            console.log(newSetting)
-            ws.send(JSON.stringify(newSetting))
+            console.log($("#videoQuality").val())
+            userJSON.configuration.videoQuality = $("#videoQuality").val();
+            ws.send(JSON.stringify(userJSON))
         });
     });
 
