added buttons for html pages

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
 <body>
     <h3>Main Page</h3>
     <a href="settings.html">Go to settings page</a>
-    <a href=".html">Go to  page</a>
-    <a href=".html">Go to  page</a>
-    <a href=".html">Go to  page</a>
+    <a href="stream.html">Go to stream page</a>
+    <a href="sensors.html">Go to sensors page</a>
+    <a href="motor.html">Go to motor page</a>
+    <a href="power.html">Go to power page</a>
 
 </body>
 </html>
